--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: python:3.7-alpine
 test:
   stage: test
   script:
-  - pip install -U sphinx
+  - pip install -U -r docs/requirements.txt
   - sphinx-build -b html docs public
   only:
   - branches
