--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,6 @@ Rules-Requires-Root: no
 
 Package: naivecalendar
 Architecture: all
-Depends: ${misc:Depends}, python3 (>=3.6), rofi
+Depends: ${misc:Depends}, python3 (>=3.6), python3-tk, rofi
 Description: Simple rofi calendar popup
  A simple calendar popup with rofi and python3
