reformat code : simpler main function

--- a/src/themes/demo.cfg
+++ b/src/themes/demo.cfg
@@ -40,7 +40,7 @@ SYM_PREV_YEAR =  ◀◀, <<, --, pp
 # path to save notes (retative to $HOME)
 NOTES_RELATIVE_PATH = .naivecalendar_notes 
 # strftime format, contains at least %d and month (%b, %m...)  + year (%Y...) identifier
-NOTES_DATE_FORMAT = %Y-%m-%d 
+NOTES_DATE_FORMAT = notes-%Y-%m-%d 
 
 [SHAPE]
 # 7 days for a week
