add != event folder

--- a/src/themes/classic_dark.cfg
+++ b/src/themes/classic_dark.cfg
@@ -38,9 +38,9 @@ SYM_PREV_YEAR =  ◀◀, <<, --, pp
 
 [NOTES]
 # path to save notes (retative to $HOME)
-NOTES_RELATIVE_PATH = .naivecalendar_notes 
 # strftime format, contains at least %d and month (%b, %m...)  + year (%Y...) identifier
-NOTES_DATE_FORMAT = %Y-%m-%d 
+NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
+BIRTHDAYS = Documents/Birthdays/birthday_on_%d-%b-%Y.txt
 
 [SHAPE]
 # 7 days for a week
@@ -63,6 +63,7 @@ ROW_CONTROL_MENU = 7
 SYM_NOTES = notes,
 SYM_HELP = help,
 SYM_THEME = theme, 
+SYM_EVENT = event,
 
 
 
