add menu for popup / correct full day name

--- a/src/themes/classic_dark.cfg
+++ b/src/themes/classic_dark.cfg
@@ -40,7 +40,7 @@ SYM_PREV_YEAR =  ◀◀, <<, --, pp
 # path to save notes (retative to $HOME)
 # strftime format, contains at least %d and month (%b, %m...)  + year (%Y...) identifier
 NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
-BIRTHDAYS = Documents/Birthdays/birthday_on_%d-%b-%Y.txt
+BIRTHDAYS = Documents/Birthdays/birthday_on_%A-%d-%b-%Y.txt
 
 [SHAPE]
 # 7 days for a week
@@ -60,10 +60,10 @@ ROW_CONTROL_MENU = 7
 
 [SHORTCUTS]
 # shortcut to open a popup
-SYM_NOTES = notes,
-SYM_HELP = help,
-SYM_THEME = theme, 
-SYM_EVENT = event,
+SYM_SHOW_HELP = help, display help
+SYM_SWITCH_THEME = theme, switch theme 
+SYM_SHOW_EVENTS = event, show month events
+SYM_SWITCH_EVENT = switch, switch event type
 
 
 
