now support all strftime symbols for notes

--- a/src/themes/classic_dark.cfg
+++ b/src/themes/classic_dark.cfg
@@ -40,7 +40,7 @@ SYM_PREV_YEAR =  ◀◀, <<, --, pp
 # path to save notes (retative to $HOME)
 # strftime format, contains at least %d and month (%b, %m...)  + year (%Y...) identifier
 NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
-BIRTHDAYS = Documents/Birthdays/birthday_on_%A-%d-%b-%Y.txt
+BIRTHDAYS = Documents/Birthdays/birthday_on_%w-%-d-%A-%d-%b-%Y.txt
 
 [SHAPE]
 # 7 days for a week
