add menu button

--- a/src/themes/classic_dark.cfg
+++ b/src/themes/classic_dark.cfg
@@ -35,8 +35,11 @@ SYM_NEXT_MONTH = ▶,  >,  +,  n
 SYM_NEXT_YEAR =  ▶▶, >>, ++, nn 
 SYM_PREV_MONTH =  ◀,  <,  -,  p 
 SYM_PREV_YEAR =  ◀◀, <<, --, pp 
+SYM_MENU = ☰, mm, menu
 
 [SHAPE]
+# NB... variables can be activated throught naivecalendar.py file
+# They can be usefull if where you live week don't last 7 days
 # 7 days for a week
 #NB_COL = 7  
 # number of "complete" weeks, a month can extend up to 6 weeks
@@ -81,6 +84,7 @@ BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j
 # It's not mandatory but 
 #  - first is shortcut to be enter in rofi prompt
 #  - second is a more descriptive sentence to be selected in rofi popup
+#  - others are just shortcuts
 
 # Display a simple help message
 SYM_SHOW_HELP = help, display help
