--- a/src/themes/classic_dark_compact.cfg
+++ b/src/themes/classic_dark_compact.cfg
@@ -4,10 +4,10 @@ USER_LOCALE =
 
 [HEADER]
 # date format in rofi prompt
-PROMT_DATE_FORMAT = %d %b %Y 
+PROMT_DATE_FORMAT = %b %Y 
 
 # toogle day num and name header display
-IS_TODAY_HEAD_MSG = False 
+IS_TODAY_HEAD_MSG = True 
 
 # 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large', see pango markup language spec
 TODAY_HEAD_NUMB_SIZE = xx-large 
@@ -19,7 +19,7 @@ TODAY_HEAD_NAME_RISE = 12000
 
 [DAY NAMES]
 # day name lenght
-DAY_ABBR_LENGHT = 1 
+DAY_ABBR_LENGHT = 1
 # 0 = sunday, 1 = monday...
 FIRST_DAY_WEEK = 1 
 # day names list, if empty, locale names will be set (given USER_LOCALE)
@@ -35,14 +35,11 @@ SYM_NEXT_MONTH = ▶,  >,  +,  n
 SYM_NEXT_YEAR =  ▶▶, >>, ++, nn 
 SYM_PREV_MONTH =  ◀,  <,  -,  p 
 SYM_PREV_YEAR =  ◀◀, <<, --, pp 
-
-[NOTES]
-# path to save notes (retative to $HOME)
-NOTES_RELATIVE_PATH = .naivecalendar_notes 
-# strftime format, contains at least %d and month (%b, %m...)  + year (%Y...) identifier
-NOTES_DATE_FORMAT = %Y-%m-%d 
+SYM_MENU = , mm, menu
 
 [SHAPE]
+# NB... variables can be activated throught naivecalendar.py file
+# They can be usefull if where you live week don't last 7 days
 # 7 days for a week
 #NB_COL = 7  
 # number of "complete" weeks, a month can extend up to 6 weeks
@@ -52,17 +49,51 @@ NOTES_DATE_FORMAT = %Y-%m-%d
 
 # 3 next parameter are simply relative positions
 # row number where to display day symbols
-ROW_WEEK_SYM = 0
+ROW_WEEK_SYM = 0 
 # row number where to display calendar first line
 ROW_CAL_START = 2 
 # row number where to display buttons
 ROW_CONTROL_MENU = 1 
 
+[EVENTS]
+# "Events" are files created by the calendar
+# The user can create one by interacting with a day number (i.e. press enter for example)
+# A day with a linked note will appear colored
+#
+# Events are stored in a folder (specified below)
+# Multiples folder can be created (work, personnal, birthdays...)
+# Only one is displayed at a time, but it can be switch on fly
+# Folders are relative to $HOME
+#
+# Files name are strftime formatted strings (date.strftime('%d-%b-%y') --> 10-Jan-2021)
+# Note name strftime format should contains at least the %d directive 
+# Name without specified month (or year) directive, will induce a reccurent event.
+# Check strftime directives at https://strftime.org/
+#
+# To add a new folder, add a variable in this [EVENTS] Section with the following format:
+#
+# <EVENT TYPE> = <relative/folder/path> / <string with strftime directives> . <extension>
+# for example :
+#    NOTES     = .naivecalendar_notes   /       my_notes_%Y-%m-%d           .     txt
+#
+NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
+BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j-%-j-%H-%-H.txt
+
 [SHORTCUTS]
-# shortcut to open a popup
-SYM_NOTES = notes,
-SYM_HELP = help,
-SYM_THEME = theme, 
+# those are shortcuts to open popup windows
+# It's not mandatory but 
+#  - first is shortcut to be enter in rofi prompt
+#  - second is a more descriptive sentence to be selected in rofi popup
+#  - others are just shortcuts
 
-
+# Display a simple help message
+SYM_SHOW_HELP = help, display help
+# Change calendar theme for one in theme folder
+SYM_SWITCH_THEME = theme, switch theme 
+# show events of the current month
+SYM_SHOW_EVENTS = event, show month events
+# Switch to another "event" folder (see [EVENTS] section above)
+SYM_SWITCH_EVENT = switch, switch event type
+# Popup that display all these shortcuts options
+SYM_SHOW_MENU = menu, show this menu
 
