--- a/src/themes/classic_light.cfg
+++ b/src/themes/classic_light.cfg
@@ -77,7 +77,7 @@ ROW_CONTROL_MENU = 7
 #    NOTES     = .naivecalendar_notes   /       my_notes_%Y-%m-%d           .     txt
 #
 NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
-BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j-%-j-%H-%-H.txt
+# BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j-%-j-%H-%-H.txt
 
 [SHORTCUTS]
 # those are shortcuts to open popup windows
