add another row (for shortcuts) / update themes / prevent bad cache file error

--- a/src/themes/classic_light.cfg
+++ b/src/themes/classic_light.cfg
@@ -2,40 +2,46 @@
 # keep empty to get system locale, use 'locale -a' on your system to list locales
 USER_LOCALE = 
 
+
+
 [HEADER]
 # date format in rofi prompt
 PROMT_DATE_FORMAT = %b %Y 
 
-# toogle day num and name header display
+#  Show day num and name right under rofi prompt
+#  Set value to False to hide it
 IS_TODAY_HEAD_MSG = True 
 
+# Control size of day name and day number
 # 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large', see pango markup language spec
 TODAY_HEAD_NUMB_SIZE = xx-large 
 TODAY_HEAD_NAME_SIZE = small 
 
+# Control vertical position of day name and day number
 # The vertical displacement from the baseline, in ten thousandths of an em, see pango markup language spec
 TODAY_HEAD_NUMB_RISE = 0 
 TODAY_HEAD_NAME_RISE = 12000 
 
+
+
 [DAY NAMES]
+# Set format of day name abbreviations
 # day name lenght
 DAY_ABBR_LENGHT = 3 
 # 0 = sunday, 1 = monday...
-FIRST_DAY_WEEK = 1 
-# day names list, if empty, locale names will be set (given USER_LOCALE)
-SYM_WEEK_DAYS =  
+FIRST_DAY_WEEK = 1
 
-[DAYS]
-# day symbols
-SYM_DAYS_NUM = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
+
 
 [CONTROL]
-# 1st symbol is displayed, others are simply shortcuts
-SYM_NEXT_MONTH = ▶,  >,  +,  n 
-SYM_NEXT_YEAR =  ▶▶, >>, ++, nn 
-SYM_PREV_MONTH =  ◀,  <,  -,  p 
-SYM_PREV_YEAR =  ◀◀, <<, --, pp 
-SYM_MENU = ☰, mm, menu
+# Symbols to navigate between months and years
+# 1st symbol is displayed, others are simply shortcuts to enter in rofi prompt
+SYM_NEXT_MONTH =  ▶,  >,  +,  n
+SYM_NEXT_YEAR =  ▶▶, >>, ++, nn
+SYM_PREV_MONTH =  ◀,  <,  -,  p
+SYM_PREV_YEAR =  ◀◀, <<, --, pp
+
+
 
 [SHAPE]
 # NB... variables can be activated throught naivecalendar.py file
@@ -44,16 +50,64 @@ SYM_MENU = ☰, mm, menu
 #NB_COL = 7  
 # number of "complete" weeks, a month can extend up to 6 weeks
 #NB_WEEK = 6  
-# 1 day header + 6 weeks + 1 control menu
-#NB_ROW = 8  
 
-# 3 next parameter are simply relative positions
-# row number where to display day symbols
+# Number of row in the calendar, 
+# please adjust this value when you change content
+# please adjust 'lines' variable in the <theme>.rasi file to the same value.
+# 1 day header + 6 weeks + 1 control menu + 1 shortcuts menu
+NB_ROW = 8
+
+
+
+[CONTENT]
+
+# Rows
+######
+# Row number where to display symbols (see Symbols in this section)
+# rows count start at 0
+# keep empty to desactivate the row display
+
+# row number where to display calendar first line, see [DAYS] section
 ROW_WEEK_SYM = 0 
-# row number where to display calendar first line
+# row number where day numbers display start 
+# next row start at ROW_CAL_START + 6 (6 weeks) 
 ROW_CAL_START = 1 
-# row number where to display buttons
+# row number where to display the "control row", see [CONTROL] section
 ROW_CONTROL_MENU = 7 
+# additionnal row, used to display shortcuts buttons, see [SHORTCUTS] section
+ROW_SHORTCUTS =    
+
+# Symbols
+#########
+# Keep empty to get defaut values, fill with value to force a content
+#
+# Please put many values as number of columns in the calendar
+# except for SYMS_DAYS_NUM, that need at least 31 values
+#
+# Next varaibles names represents a "conventionnal" use case, 
+# but any symbol can be set to any row, for example, to merge
+# control row and shortcuts row : ◀◀, ◀,_ , ,_ , ▶, ▶▶
+# 
+# please set the same symbols as in [CONTROL] and [SHORTCUTS] section 
+# (selected rofi element string will be compared to those characters in those lists) 
+
+# SYMS_WEEK_DAYS contains day names (usally abbreviation) header to display
+# SYMS_WEEK_DAYS default is set using locale (see [DAY NAMES] section)
+# but can be override, for example, with : 
+# SYMS_WEEK_DAYS = Mon, Tue, Wed, Thu, Fri, Sat, Sun 
+# /!\ don't forget to set "first day of the week" (see [DAY NAMES] section
+SYMS_WEEK_DAYS = 
+
+# SYMS_DAYS_NUM = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31
+SYMS_DAYS_NUM = 
+
+# SYMS_CONTROL_MENU = ◀◀, ◀,_ ,_ ,_ , ▶, ▶▶
+SYMS_CONTROL_MENU = ◀◀, ◀,_ ,☰ ,_ , ▶, ▶▶
+
+# SYMS_SHORTCUTS = , , , ,_,_, 
+SYMS_SHORTCUTS = 
+
+
 
 [EVENTS]
 # "Events" are files created by the calendar
@@ -77,23 +131,29 @@ ROW_CONTROL_MENU = 7
 #    NOTES     = .naivecalendar_notes   /       my_notes_%Y-%m-%d           .     txt
 #
 NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
+
+# Here is a more exentric example
 # BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j-%-j-%H-%-H.txt
+
+
 
 [SHORTCUTS]
 # those are shortcuts to open popup windows
 # It's not mandatory but 
-#  - first is shortcut to be enter in rofi prompt
-#  - second is a more descriptive sentence to be selected in rofi popup
-#  - others are just shortcuts
+#  - first symbols to display on the calendar (see [CONTENT] section)
+#  - last is a more descriptive sentence to be selected in rofi popup
+#  - others are just shortcuts to be enter in rofi prompt
 
 # Display a simple help message
-SYM_SHOW_HELP = help, display help
+SYM_SHOW_HELP = , help, hh,   display help
 # Change calendar theme for one in theme folder
-SYM_SWITCH_THEME = theme, switch theme 
+SYM_SWITCH_THEME = , theme, tt,  switch theme 
 # show events of the current month
-SYM_SHOW_EVENTS = event, show month events
+SYM_SHOW_EVENTS = , event, ee,  show month events
 # Switch to another "event" folder (see [EVENTS] section above)
-SYM_SWITCH_EVENT = switch, switch event type
+SYM_SWITCH_EVENT = , switch, ss,  switch event type
 # Popup that display all these shortcuts options
-SYM_SHOW_MENU = menu, show this menu
+SYM_SHOW_MENU = ☰, menu, mm, ☰ show this menu
+
+
 
