--- a/src/themes/classic_dark_extended.cfg
+++ b/src/themes/classic_dark_extended.cfg
@@ -1,6 +1,6 @@
 [LOCALE]
 # keep empty to get system locale, use 'locale -a' on your system to list locales
-USER_LOCALE = es_ES.utf8
+USER_LOCALE =
 
 
 
@@ -96,7 +96,7 @@ ROW_SHORTCUTS = 0
 # but can be override, for example, with : 
 # SYMS_WEEK_DAYS = Mon, Tue, Wed, Thu, Fri, Sat, Sun 
 # /!\ don't forget to set "first day of the week" (see [DAY NAMES] section
-SYMS_WEEK_DAYS = A,B,C,D,E,F,G
+SYMS_WEEK_DAYS =
 
 # SYMS_DAYS_NUM = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31
 SYMS_DAYS_NUM = 
