config to default

--- a/src/themes/classic_dark.cfg
+++ b/src/themes/classic_dark.cfg
@@ -133,7 +133,7 @@ SYMS_SHORTCUTS =
 NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
 
 # Here is a more exentric example
-BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j-%-j-%H-%-H.txt
+# BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j-%-j-%H-%-H.txt
 
 
 
