more configurable header / update and add themes

--- a/src/themes/classic_dark_extended.cfg
+++ b/src/themes/classic_dark_extended.cfg
@@ -3,7 +3,6 @@
 USER_LOCALE =
 
 
-
 [HEADER]
 # date format in rofi prompt
 PROMT_DATE_FORMAT = %b %Y 
@@ -12,15 +11,18 @@ PROMT_DATE_FORMAT = %b %Y
 #  Set value to False to hide it
 IS_TODAY_HEAD_MSG = True 
 
-# Control size of day name and day number
-# 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large', see pango markup language spec
-TODAY_HEAD_NUMB_SIZE = xx-large 
-TODAY_HEAD_NAME_SIZE = small 
+# The message could contain strftime directives
+# Its size and rise are set using pango markup langage
+# The msg can be a list of elements each at a different format
+TODAY_HEAD_MSG_TXT = %d, %A
 
-# Control vertical position of day name and day number
-# The vertical displacement from the baseline, in ten thousandths of an em, see pango markup language spec
-TODAY_HEAD_NUMB_RISE = 0 
-TODAY_HEAD_NAME_RISE = 12000 
+# Control size (must contain same number of element as TODAY_HEAD_MSG_TXT
+# 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large'
+TODAY_HEAD_MSG_SIZES = xx-large, small
+
+# Control vertical position 
+# The vertical displacement from the baseline, in ten thousandths of an em
+TODAY_HEAD_MSG_RISES = 0, 12000
 
 
 
