--- a/src/themes/paper-float.cfg
+++ b/src/themes/paper-float.cfg
@@ -39,10 +39,10 @@ FIRST_DAY_WEEK = 1
 [CONTROL]
 # Symbols to navigate between months and years
 # 1st symbol is displayed, others are simply shortcuts to enter in rofi prompt
-SYM_NEXT_MONTH =  ▶,  >,  +,  n
-SYM_NEXT_YEAR =  ▶▶, >>, ++, nn
-SYM_PREV_MONTH =  ◀,  <,  -,  p
-SYM_PREV_YEAR =  ◀◀, <<, --, pp
+SYM_NEXT_MONTH =  ,  >,  +,  n
+SYM_NEXT_YEAR =  , >>, ++, nn
+SYM_PREV_MONTH =  ,  <,  -,  p
+SYM_PREV_YEAR =  , <<, --, pp
 
 
 
@@ -105,9 +105,9 @@ SYMS_WEEK_DAYS =
 SYMS_DAYS_NUM = 
 
 # SYMS_CONTROL_MENU = ◀◀, ◀,_ ,_ ,_ , ▶, ▶▶
-SYMS_CONTROL_MENU = ◀◀, ◀,_ ,☰ ,_ , ▶, ▶▶
+SYMS_CONTROL_MENU = , ,  ,  ,  , , 
 
-# SYMS_SHORTCUTS = , , , ,_,_, 
+# SYMS_SHORTCUTS = , , , , , , 
 SYMS_SHORTCUTS = 
 
 
@@ -156,7 +156,7 @@ SYM_SHOW_EVENTS = , event, ee,  show month events
 # Switch to another "event" folder (see [EVENTS] section above)
 SYM_SWITCH_EVENT = , switch, ss,  switch event type
 # Popup that display all these shortcuts options
-SYM_SHOW_MENU = ☰, menu, mm, ☰ show this menu
+SYM_SHOW_MENU = , menu, mm,  show this menu
 
 
 
