--- a/src/themes/retro_blue_compact.cfg
+++ b/src/themes/retro_blue_compact.cfg
@@ -105,7 +105,7 @@ SYMS_WEEK_DAYS =
 SYMS_DAYS_NUM = 
 
 # SYMS_CONTROL_MENU = ◀◀, ◀,_ ,_ ,_ , ▶, ▶▶
-SYMS_CONTROL_MENU = ◀◀, ◀,_ ,☰ ,_ , ▶, ▶▶
+SYMS_CONTROL_MENU = ◀◀, ◀,  , ♦, , ▶, ▶▶
 
 # SYMS_SHORTCUTS = , , , ,_,_, 
 SYMS_SHORTCUTS = 
@@ -156,7 +156,7 @@ SYM_SHOW_EVENTS = , event, ee,  show month events
 # Switch to another "event" folder (see [EVENTS] section above)
 SYM_SWITCH_EVENT = , switch, ss,  switch event type
 # Popup that display all these shortcuts options
-SYM_SHOW_MENU = ☰, menu, mm, ☰ show this menu
+SYM_SHOW_MENU = ♦, menu, mm, ♦ show this menu
 
 
 
