--- a/src/themes/square_nord.cfg
+++ b/src/themes/square_nord.cfg
@@ -105,7 +105,7 @@ SYMS_WEEK_DAYS =
 SYMS_DAYS_NUM = 
 
 # SYMS_CONTROL_MENU = ◀◀, ◀,_ ,_ ,_ , ▶, ▶▶
-SYMS_CONTROL_MENU = ◀◀, ◀,_ ,☰ ,_ , ▶, ▶▶
+SYMS_CONTROL_MENU = ◀◀, ◀,  , ☰  ,  , ▶, ▶▶
 
 # SYMS_SHORTCUTS = , , , ,_,_, 
 SYMS_SHORTCUTS = 
