--- a/debian/control
+++ b/debian/control
@@ -11,5 +11,6 @@ Package: naivecalendar
 Architecture: all
 Depends: ${misc:Depends}, python3 (>=3.6), rofi
 Recommends: xclip
+Suggests: fonts-font-awesome
 Description: Simple rofi calendar popup
  A simple calendar popup with rofi and python3
