fix paper-float hteme

--- a/src/themes/paper-float.cfg
+++ b/src/themes/paper-float.cfg
@@ -39,8 +39,8 @@ FIRST_DAY_WEEK = 1
 [CONTROL]
 # Symbols to navigate between months and years
 # 1st symbol is displayed, others are simply shortcuts to enter in rofi prompt
-SYM_NEXT_MONTH =  ,  >,  +,  n
-SYM_NEXT_YEAR =  , >>, ++, nn
+SYM_NEXT_MONTH =  ,  >,  +,  n
+SYM_NEXT_YEAR =  , >>, ++, nn
 SYM_PREV_MONTH =  ,  <,  -,  p
 SYM_PREV_YEAR =  , <<, --, pp
 
