--- a/src/themes/material_darker.cfg
+++ b/src/themes/material_darker.cfg
@@ -15,7 +15,7 @@ IS_TODAY_HEAD_MSG = True
 # The message could contain strftime directives
 # Its size and rise are set using pango markup langage
 # The msg can be a list of elements each at a different format
-TODAY_HEAD_MSG_TXT = %d, %A                                                 ,%b, %Y
+TODAY_HEAD_MSG_TXT = %d, %A                                               ,%b, %Y
 
 # Control size (must contain same number of element as TODAY_HEAD_MSG_TXT
 # 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large'
@@ -105,7 +105,7 @@ SYMS_WEEK_DAYS =
 SYMS_DAYS_NUM = 
 
 # SYMS_CONTROL_MENU = ◀◀, ◀,_ ,_ ,_ , ▶, ▶▶
-SYMS_CONTROL_MENU = ◀◀, ◀,_ ,☰ ,_ , ▶, ▶▶
+SYMS_CONTROL_MENU = ◀◀, ◀,  ,☰ ,  , ▶, ▶▶
 
 # SYMS_SHORTCUTS = , , , ,_,_, 
 SYMS_SHORTCUTS = 
