--- a/src/themes/material_darker.cfg
+++ b/src/themes/material_darker.cfg
@@ -15,15 +15,15 @@ IS_TODAY_HEAD_MSG = True
 # The message could contain strftime directives
 # Its size and rise are set using pango markup langage
 # The msg can be a list of elements each at a different format
-TODAY_HEAD_MSG_TXT = %d, %A                                               ,%b, %Y
+TODAY_HEAD_MSG_TXT = %d, %A,                                  ,%b, %Y
 
 # Control size (must contain same number of element as TODAY_HEAD_MSG_TXT
 # 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large'
-TODAY_HEAD_MSG_SIZES = xx-large, small, small, x-large
+TODAY_HEAD_MSG_SIZES = xx-large, small, medium , medium, x-large
 
 # Control vertical position 
 # The vertical displacement from the baseline, in ten thousandths of an em
-TODAY_HEAD_MSG_RISES = 0, 12000, 0, 0
+TODAY_HEAD_MSG_RISES = 0, 12000, 0, 0, 0
 
 
 
