--- a/src/themes/classic_dark_variant.cfg
+++ b/src/themes/classic_dark_variant.cfg
@@ -15,15 +15,15 @@ IS_TODAY_HEAD_MSG = True
 # The message could contain strftime directives
 # Its size and rise are set using pango markup langage
 # The msg can be a list of elements each at a different format
-TODAY_HEAD_MSG_TXT = %b %Y               ,%d,%A
+TODAY_HEAD_MSG_TXT = %b %Y, <br> ,%d, %A
 
 # Control size (must contain same number of element as TODAY_HEAD_MSG_TXT
 # 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large'
-TODAY_HEAD_MSG_SIZES = medium, xx-large, small
+TODAY_HEAD_MSG_SIZES = medium, _, xx-large, small
 
 # Control vertical position 
 # The vertical displacement from the baseline, in ten thousandths of an em
-TODAY_HEAD_MSG_RISES = 0, 0, 12000
+TODAY_HEAD_MSG_RISES = 0, 0, 0, 12000
 
 
 
