upgrade bar : refer to id instead or duplicate symbol

--- a/src/themes/classic_dark_variant.cfg
+++ b/src/themes/classic_dark_variant.cfg
@@ -104,11 +104,33 @@ SYMS_WEEK_DAYS =
 # SYMS_DAYS_NUM = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31
 SYMS_DAYS_NUM = 
 
-# SYMS_CONTROL_MENU = ◀◀, ◀,_ ,_ ,_ , ▶, ▶▶
-SYMS_CONTROL_MENU = ◀◀, ◀,  ,☰ ,  , ▶, ▶▶
+# Content of the control bar and shortcuts bar can be filled with
+# firsts symbol of the lists in [SHORTCUTS] section or [CONTROL] section
+#
+# Just put corresponding id in next list to fill calendar with symbols
+# /!\ don't forget to activate the row (see ROW_* variables in above in this section)
+# otherwise it won't be displayed
+# 
+# ID table :
+# ================== ===============
+#  Action             id                                                                              
+# ================== ===============
+# SYM_NEXT_MONTH      pp
+# SYM_NEXT_YEAR       p
+# SYM_PREV_MONTH      n
+# SYM_PREV_YEAR       nn
+# SYM_SHOW_HELP       h
+# SYM_SWITCH_THEME    t
+# SYM_SHOW_EVENTS     e
+# SYM_SWITCH_EVENT    s
+# SYM_SHOW_MENU       m
+# ================== ===============
+#                                                                               
+#SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
+SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
 
-# SYMS_SHORTCUTS = , , , ,_,_, 
-SYMS_SHORTCUTS = 
+#SYMS_SHORTCUTS = h, t, s, e,  ,  , m
+SYMS_SHORTCUTS =
 
 
 
