homogeneous theme cfg

--- a/src/themes/paper-float.cfg
+++ b/src/themes/paper-float.cfg
@@ -1,36 +1,39 @@
 [LOCALE]
 # keep empty to get system locale, use 'locale -a' on your system to list locales
-USER_LOCALE = 
+USER_LOCALE =
 
 
 
 [HEADER]
 # date format in rofi prompt
-PROMT_DATE_FORMAT = %b %Y 
+PROMT_DATE_FORMAT = %b %Y
 
 #  Show day num and name right under rofi prompt
 #  Set value to False to hide it
-IS_TODAY_HEAD_MSG = True 
+IS_TODAY_HEAD_MSG = True
 
 # The message could contain strftime directives
 # Its size and rise are set using pango markup langage
 # The msg can be a list of elements each at a different format
+#
+# /i\ insert a line break by inserting <br> element : %d, <br>, %m, ...
+# /!\ space are taken in account : , %d ,' !=  , %d    ,
 TODAY_HEAD_MSG_TXT = %A, %d, %b, %Y
 
 # Control size (must contain same number of element as TODAY_HEAD_MSG_TXT
 # 'xx-small', 'x-small', 'small', 'medium', 'large', 'x-large', 'xx-large'
 TODAY_HEAD_MSG_SIZES = small, xx-large, medium, large
 
-# Control vertical position 
+# Control vertical position
 # The vertical displacement from the baseline, in ten thousandths of an em
-TODAY_HEAD_MSG_RISES = 10500, 0, 0, 0 
+TODAY_HEAD_MSG_RISES = 10500, 0, 0, 0
 
 
 
 [DAY NAMES]
 # Set format of day name abbreviations
 # day name lenght
-DAY_ABBR_LENGHT = 3 
+DAY_ABBR_LENGHT = 3
 # 0 = sunday, 1 = monday...
 FIRST_DAY_WEEK = 1
 
@@ -50,11 +53,11 @@ SYM_PREV_YEAR =  , <<, --, pp
 # NB... variables can be activated throught naivecalendar.py file
 # They can be usefull if where you live week don't last 7 days
 # 7 days for a week
-#NB_COL = 7  
+#NB_COL = 7
 # number of "complete" weeks, a month can extend up to 6 weeks
-#NB_WEEK = 6  
+#NB_WEEK = 6
 
-# Number of row in the calendar, 
+# Number of row in the calendar,
 # please adjust this value when you change content
 # please adjust 'lines' variable in the <theme>.rasi file to the same value.
 # 1 day header + 6 weeks + 1 control menu + 1 shortcuts menu
@@ -71,14 +74,14 @@ NB_ROW = 8
 # keep empty to desactivate the row display
 
 # row number where to display calendar first line, see [DAYS] section
-ROW_WEEK_SYM = 0 
-# row number where day numbers display start 
-# next row start at ROW_CAL_START + 6 (6 weeks) 
-ROW_CAL_START = 1 
+ROW_WEEK_SYM = 0
+# row number where day numbers display start
+# next row start at ROW_CAL_START + 6 (6 weeks)
+ROW_CAL_START = 1
 # row number where to display the "control row", see [CONTROL] section
-ROW_CONTROL_MENU = 7 
+ROW_CONTROL_MENU = 7
 # additionnal row, used to display shortcuts buttons, see [SHORTCUTS] section
-ROW_SHORTCUTS =    
+ROW_SHORTCUTS =
 
 # Symbols
 #########
@@ -87,22 +90,22 @@ ROW_SHORTCUTS =
 # Please put many values as number of columns in the calendar
 # except for SYMS_DAYS_NUM, that need at least 31 values
 #
-# Next varaibles names represents a "conventionnal" use case, 
+# Next varaibles names represents a "conventionnal" use case,
 # but any symbol can be set to any row, for example, to merge
 # control row and shortcuts row : ◀◀, ◀,_ , ,_ , ▶, ▶▶
-# 
-# please set the same symbols as in [CONTROL] and [SHORTCUTS] section 
-# (selected rofi element string will be compared to those characters in those lists) 
+#
+# please set the same symbols as in [CONTROL] and [SHORTCUTS] section
+# (selected rofi element string will be compared to those characters in those lists)
 
 # SYMS_WEEK_DAYS contains day names (usally abbreviation) header to display
 # SYMS_WEEK_DAYS default is set using locale (see [DAY NAMES] section)
-# but can be override, for example, with : 
-# SYMS_WEEK_DAYS = Mon, Tue, Wed, Thu, Fri, Sat, Sun 
+# but can be override, for example, with :
+# SYMS_WEEK_DAYS = Mon, Tue, Wed, Thu, Fri, Sat, Sun
 # /!\ don't forget to set "first day of the week" (see [DAY NAMES] section
-SYMS_WEEK_DAYS = 
+SYMS_WEEK_DAYS =
 
 # SYMS_DAYS_NUM = 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31
-SYMS_DAYS_NUM = 
+SYMS_DAYS_NUM =
 
 # Content of the control bar and shortcuts bar can be filled with
 # firsts symbol of the lists in [SHORTCUTS] section or [CONTROL] section
@@ -110,10 +113,10 @@ SYMS_DAYS_NUM =
 # Just put corresponding id in next list to fill calendar with symbols
 # /!\ don't forget to activate the row (see ROW_* variables in above in this section)
 # otherwise it won't be displayed
-# 
+#
 # ID table :
 # ================== ===============
-#  Action             id                                                                              
+#  Action             id
 # ================== ===============
 # SYM_NEXT_MONTH      pp
 # SYM_NEXT_YEAR       p
@@ -125,7 +128,7 @@ SYMS_DAYS_NUM =
 # SYM_SWITCH_EVENT    s
 # SYM_SHOW_MENU       m
 # ================== ===============
-#                                                                               
+#
 #SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
 SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
 
@@ -145,7 +148,7 @@ SYMS_SHORTCUTS =
 # Folders are relative to $HOME
 #
 # Files name are strftime formatted strings (date.strftime('%d-%b-%y') --> 10-Jan-2021)
-# Note name strftime format should contains at least the %d directive 
+# Note name strftime format should contains at least the %d directive
 # Name without specified month (or year) directive, will induce a reccurent event.
 # Check strftime directives at https://strftime.org/
 #
@@ -164,7 +167,7 @@ NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
 
 [SHORTCUTS]
 # those are shortcuts to open popup windows
-# It's not mandatory but 
+# It's not mandatory but
 #  - first symbols to display on the calendar (see [CONTENT] section)
 #  - last is a more descriptive sentence to be selected in rofi popup
 #  - others are just shortcuts to be enter in rofi prompt
@@ -172,7 +175,7 @@ NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
 # Display a simple help message
 SYM_SHOW_HELP = , help, hh,   display help
 # Change calendar theme for one in theme folder
-SYM_SWITCH_THEME = , theme, tt,  switch theme 
+SYM_SWITCH_THEME = , theme, tt,  switch theme
 # show events of the current month
 SYM_SHOW_EVENTS = , event, ee,  show month events
 # Switch to another "event" folder (see [EVENTS] section above)
