--- a/src/themes/classic_dark_extended.cfg
+++ b/src/themes/classic_dark_extended.cfg
@@ -130,7 +130,7 @@ SYMS_DAYS_NUM =
 # ================== ===============
 #
 #SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
-SYMS_CONTROL_MENU =
+SYMS_CONTROL_MENU = pp, p,  ,  ,  , n, nn
 
 #SYMS_SHORTCUTS = h, t, s, e,  ,  , m
 SYMS_SHORTCUTS =
