--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: naivecalendar
 Section: misc
 Priority: optional
 Maintainer: Daguhh <code.daguhh@zaclys.net>
-Build-Depends: debhelper-compat (= 13)
+Build-Depends: debhelper-compat (= 13), bash-completion
 Standards-Version: 4.5.1
 Homepage: https://framagit.org/Daguhh/naivecalendar
 Rules-Requires-Root: no
