--- a/src/themes/paper-float.cfg
+++ b/src/themes/paper-float.cfg
@@ -158,7 +158,10 @@ SYMS_SHORTCUTS =
 # for example :
 #    NOTES     = .naivecalendar_notes   /       my_notes_%Y-%m-%d           .     txt
 #
-NOTES = .naivecalendar_notes/my_notes_%Y-%m-%d.txt
+
+Notes = .naivecalendar_events/MyNotes/note_%Y-%m-%d.txt
+
+Birthday = .naivecalendar_events/Birthdays/birthday_on_%d-%m.txt
 
 # Here is a more exentric example
 # BIRTHDAYS = Documents/Birthdays/birthday_on_%a-%A-%w-%d-%-d-%b-%B-%m%-m-%y-%Y-%j-%-j-%H-%-H.txt
