--- a/src/themes/classic_light_compact.cfg
+++ b/src/themes/classic_light_compact.cfg
@@ -12,6 +12,9 @@ PROMT_DATE_FORMAT = %b %Y
 #  Set value to False to hide it
 IS_TODAY_HEAD_MSG = False
 
+# Make message update at each date change
+IS_LOOP_TODAY_HEAD_MSG = False
+
 # The message could contain strftime directives
 # Its size and rise are set using pango markup langage
 # The msg can be a list of elements each at a different format
