don't strip conf white spaces / add themes

--- a/src/themes/classic_dark_compact.cfg
+++ b/src/themes/classic_dark_compact.cfg
@@ -188,6 +188,8 @@ SYM_SHOW_EVENTS = , event, ee,  show month events
 SYM_SWITCH_EVENT = , switch, ss,  switch event type
 # Popup that display all these shortcuts options
 SYM_SHOW_MENU = ♦, menu, mm, ♦ show this menu
+# Factice event (just continue programm loop)
+SYM_BACK_TO_CALENDAR = ,  back to calendar
 
 
 
