--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Rules-Requires-Root: no
 Package: naivecalendar
 Architecture: all
 Depends: ${misc:Depends}, python3 (>=3.6), rofi
-Recommends: xclip
+Recommends: xclip, sensible-utils
 Suggests: fonts-font-awesome
 Description: Simple rofi calendar popup
  A simple calendar popup with rofi and python3
