--- a/src/themes/paper-float.cfg
+++ b/src/themes/paper-float.cfg
@@ -16,11 +16,18 @@ IS_TODAY_HEAD_MSG = True
 IS_LOOP_TODAY_HEAD_MSG = False
 
 # The message could contain strftime directives
-# Its size and rise are set using pango markup langage
+# It's formated pango markup langage (only size and rise)
+#
+#   TODAY_HEAD_MSG_TXT = %d, %A               |       <span rise="0" size="xx-large">10</span>   
+#   TODAY_HEAD_MSG_SIZES = xx-large, small    | -->   <span rise="12000" size="small">monday</span>   
+#   TODAY_HEAD_MSG_RISES = 0, 12000           |      
+#
 # The msg can be a list of elements each at a different format
 #
 # /i\ insert a line break by inserting <br> element : %d, <br>, %m, ...
 # /!\ space are taken in account : , %d ,' !=  , %d    ,
+
+# Message content, element by element
 TODAY_HEAD_MSG_TXT = %A, %d, %b, %Y
 
 # Control size (must contain same number of element as TODAY_HEAD_MSG_TXT
@@ -53,12 +60,10 @@ SYM_PREV_YEAR =  , <<, --, pp
 
 
 [SHAPE]
-# NB... variables can be activated throught naivecalendar.py file
-# They can be usefull if where you live week don't last 7 days
 # 7 days for a week
-#NB_COL = 7
+#NB_COL = 7   <-- unused
 # number of "complete" weeks, a month can extend up to 6 weeks
-#NB_WEEK = 6
+#NB_WEEK = 6  <--- unused
 
 # Number of row in the calendar,
 # please adjust this value when you change content
@@ -96,9 +101,6 @@ ROW_SHORTCUTS =
 # Next varaibles names represents a "conventionnal" use case,
 # but any symbol can be set to any row, for example, to merge
 # control row and shortcuts row : ◀◀, ◀,_ , ,_ , ▶, ▶▶
-#
-# please set the same symbols as in [CONTROL] and [SHORTCUTS] section
-# (selected rofi element string will be compared to those characters in those lists)
 
 # SYMS_WEEK_DAYS contains day names (usally abbreviation) header to display
 # SYMS_WEEK_DAYS default is set using locale (see [DAY NAMES] section)
@@ -111,7 +113,7 @@ SYMS_WEEK_DAYS =
 SYMS_DAYS_NUM =
 
 # Content of the control bar and shortcuts bar can be filled with
-# firsts symbol of the lists in [SHORTCUTS] section or [CONTROL] section
+# firsts symbol of lists in [SHORTCUTS] section or [CONTROL] section
 #
 # Just put corresponding id in next list to fill calendar with symbols
 # /!\ don't forget to activate the row (see ROW_* variables in above in this section)
@@ -147,15 +149,17 @@ SYMS_SHORTCUTS =
 #
 # Events are stored in a folder (specified below)
 # Multiples folder can be created (work, personnal, birthdays...)
-# Only one is displayed at a time, but it can be switch on fly
+# Only one is displayed at a time, but you can easily switch between them
 # Folders are relative to $HOME
 #
 # Files name are strftime formatted strings (date.strftime('%d-%b-%y') --> 10-Jan-2021)
-# Note name strftime format should contains at least the %d directive
+# Note name strftime format should contains at least the %d directive 
+# (otherwise every days in the month will open same note)
+#
 # Name without specified month (or year) directive, will induce a reccurent event.
 # Check strftime directives at https://strftime.org/
 #
-# To add a new folder, add a variable in this [EVENTS] Section with the following format:
+# To add a new folder, add an entry in this [EVENTS] Section with the following format:
 #
 # <EVENT TYPE> = <relative/folder/path> / <string with strftime directives> . <extension>
 # for example :
