--- a/src/themes/classic_dark_extended.cfg
+++ b/src/themes/classic_dark_extended.cfg
@@ -21,6 +21,8 @@ IS_LOOP_TODAY_HEAD_MSG = False
 #   TODAY_HEAD_MSG_TXT = %d, %A               |       <span rise="0" size="xx-large">10</span>
 #   TODAY_HEAD_MSG_SIZES = xx-large, small    | -->   <span rise="12000" size="small">monday</span>
 #   TODAY_HEAD_MSG_RISES = 0, 12000           |
+
+# Message content, element by element
 #
 # The msg can be a list of elements each at a different format
 #
@@ -153,7 +155,9 @@ SYMS_SHORTCUTS =
 # Folders are relative to $HOME
 #
 # Files name are strftime formatted strings (date.strftime('%d-%b-%y') --> 10-Jan-2021)
-# Note name strftime format should contains at least the %d directive
+# Note name strftime format should contains at least the %d directive 
+# (otherwise every days in the month will open same note)
+#
 # (otherwise every days in the month will open same note)
 #
 # Name without specified month (or year) directive, will induce a reccurent event.
