add 'back to current month' shortcut

--- a/src/themes/classic_dark_compact.cfg
+++ b/src/themes/classic_dark_compact.cfg
@@ -132,6 +132,7 @@ SYMS_DAYS_NUM =
 # SYM_SHOW_HELP       h
 # SYM_SWITCH_THEME    t
 # SYM_SHOW_EVENTS     e
+# SYM_GO_TODAY        bb
 # SYM_SWITCH_EVENT    s
 # SYM_SHOW_MENU       m
 # ================== ===============
@@ -194,6 +195,8 @@ SYM_SWITCH_THEME = , theme, tt,  switch theme
 SYM_SHOW_EVENTS = , event, ee,  show month events
 # Switch to another "event" folder (see [EVENTS] section above)
 SYM_SWITCH_EVENT = , switch, ss,  switch event type
+# Go back to current date
+SYM_GO_TODAY = , bb,  back to current month
 # Popup that display all these shortcuts options
 SYM_SHOW_MENU = ♦, menu, mm, ♦ show this menu
 # Factice event (just continue programm loop)
