--- a/src/themes/paper-float.cfg
+++ b/src/themes/paper-float.cfg
@@ -132,6 +132,7 @@ SYMS_DAYS_NUM =
 # SYM_SHOW_EVENTS     e
 # SYM_SWITCH_EVENT    s
 # SYM_SHOW_MENU       m
+# SYM_GO_TODAY        bb
 # ================== ===============
 #
 #SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
@@ -194,6 +195,8 @@ SYM_SWITCH_EVENT = , switch, ss,  switch event type
 SYM_SHOW_MENU =  , menu, mm,  show this menu
 # Factice event (just continue programm loop)
 SYM_BACK_TO_CALENDAR = ,  back to calendar
+# Go back to current date
+SYM_GO_TODAY = , bb,  back to current month
 
 
 
