add magnolia theme

--- a/src/themes/magnolia.cfg
+++ b/src/themes/magnolia.cfg
@@ -18,11 +18,9 @@ IS_LOOP_TODAY_HEAD_MSG = False
 # The message could contain strftime directives
 # It's formated pango markup langage (only size and rise)
 #
-#   TODAY_HEAD_MSG_TXT = %d, %A               |       <span rise="0" size="xx-large">10</span>
-#   TODAY_HEAD_MSG_SIZES = xx-large, small    | -->   <span rise="12000" size="small">monday</span>
-#   TODAY_HEAD_MSG_RISES = 0, 12000           |
-
-# Message content, element by element
+#   TODAY_HEAD_MSG_TXT = %d, %A               |       <span rise="0" size="xx-large">10</span>   
+#   TODAY_HEAD_MSG_SIZES = xx-large, small    | -->   <span rise="12000" size="small">monday</span>   
+#   TODAY_HEAD_MSG_RISES = 0, 12000           |      
 #
 # The msg can be a list of elements each at a different format
 #
@@ -45,7 +43,7 @@ TODAY_HEAD_MSG_RISES = 0, 12000
 [DAY NAMES]
 # Set format of day name abbreviations
 # day name lenght
-DAY_ABBR_LENGHT = 3
+DAY_ABBR_LENGHT = 1
 # 0 = sunday, 1 = monday...
 FIRST_DAY_WEEK = 1
 
@@ -54,9 +52,9 @@ FIRST_DAY_WEEK = 1
 [CONTROL]
 # Symbols to navigate between months and years
 # 1st symbol is displayed, others are simply shortcuts to enter in rofi prompt
-SYM_NEXT_MONTH =  ▶ ,  >,  +,  n
+SYM_NEXT_MONTH =  ▶,  >,  +,  n
 SYM_NEXT_YEAR =  ▶▶, >>, ++, nn
-SYM_PREV_MONTH =  ◀ ,  <,  -,  p
+SYM_PREV_MONTH =  ◀,  <,  -,  p
 SYM_PREV_YEAR =  ◀◀, <<, --, pp
 
 
@@ -71,7 +69,7 @@ SYM_PREV_YEAR =  ◀◀, <<, --, pp
 # please adjust this value when you change content
 # please adjust 'lines' variable in the <theme>.rasi file to the same value.
 # 1 day header + 6 weeks + 1 control menu + 1 shortcuts menu
-NB_ROW = 9
+NB_ROW = 8
 
 
 
@@ -84,14 +82,14 @@ NB_ROW = 9
 # keep empty to desactivate the row display
 
 # row number where to display calendar first line, see [DAYS] section
-ROW_WEEK_SYM = 1
+ROW_WEEK_SYM = 0
 # row number where day numbers display start
 # next row start at ROW_CAL_START + 6 (6 weeks)
-ROW_CAL_START = 2
+ROW_CAL_START = 1
 # row number where to display the "control row", see [CONTROL] section
-ROW_CONTROL_MENU = 8
+ROW_CONTROL_MENU = 7
 # additionnal row, used to display shortcuts buttons, see [SHORTCUTS] section
-ROW_SHORTCUTS = 0
+ROW_SHORTCUTS =
 
 # Symbols
 #########
@@ -132,13 +130,13 @@ SYMS_DAYS_NUM =
 # SYM_SHOW_HELP       h
 # SYM_SWITCH_THEME    t
 # SYM_SHOW_EVENTS     e
-# SYM_GO_TODAY        bb
 # SYM_SWITCH_EVENT    s
 # SYM_SHOW_MENU       m
+# SYM_GO_TODAY        bb
 # ================== ===============
 #
 #SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
-SYMS_CONTROL_MENU = pp, p,  ,  ,  , n, nn
+SYMS_CONTROL_MENU = pp, p,  , m,  , n, nn
 
 #SYMS_SHORTCUTS = h, t, s, e,  ,  , m
 SYMS_SHORTCUTS =
@@ -157,8 +155,6 @@ SYMS_SHORTCUTS =
 #
 # Files name are strftime formatted strings (date.strftime('%d-%b-%y') --> 10-Jan-2021)
 # Note name strftime format should contains at least the %d directive 
-# (otherwise every days in the month will open same note)
-#
 # (otherwise every days in the month will open same note)
 #
 # Name without specified month (or year) directive, will induce a reccurent event.
@@ -188,19 +184,19 @@ Birthday = .naivecalendar_events/Birthdays/birthday_on_%d-%m.txt
 #  - others are just shortcuts to be enter in rofi prompt
 
 # Display a simple help message
-SYM_SHOW_HELP =  , help, hh,   display help
+SYM_SHOW_HELP = , help, hh,   display help
 # Change calendar theme for one in theme folder
-SYM_SWITCH_THEME =  , theme, tt,  switch theme
+SYM_SWITCH_THEME = , theme, tt,  switch theme
 # show events of the current month
-SYM_SHOW_EVENTS =  , event, ee,  show month events
+SYM_SHOW_EVENTS = , event, ee,  show month events
 # Switch to another "event" folder (see [EVENTS] section above)
-SYM_SWITCH_EVENT =  , switch, ss,  switch event type
-# Go back to current date
-SYM_GO_TODAY =  , bb,  back to current month
+SYM_SWITCH_EVENT = , switch, ss,  switch event type
 # Popup that display all these shortcuts options
-SYM_SHOW_MENU =  , menu, mm,  show this menu
+SYM_SHOW_MENU = ☰, menu, mm, ☰ show this menu
 # Factice event (just continue programm loop)
-SYM_BACK_TO_CALENDAR =  ,  back to calendar
+SYM_BACK_TO_CALENDAR = ,  back to calendar
+# Go back to current date
+SYM_GO_TODAY = , bb,  back to current month
 
 
 
