adjust symbols in theme

--- a/src/themes/magnolia.cfg
+++ b/src/themes/magnolia.cfg
@@ -192,7 +192,7 @@ SYM_SHOW_EVENTS = , event, ee,  show month events
 # Switch to another "event" folder (see [EVENTS] section above)
 SYM_SWITCH_EVENT = , switch, ss,  switch event type
 # Popup that display all these shortcuts options
-SYM_SHOW_MENU = ☰, menu, mm, ☰ show this menu
+SYM_SHOW_MENU = , menu, mm,  show this menu
 # Factice event (just continue programm loop)
 SYM_BACK_TO_CALENDAR = ,  back to calendar
 # Go back to current date
